# sortiva

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: flagman.hpp  list.hpp  logger.hpp  std.hpp  types.hpp
include/Profiling/: Timer.hpp
src/: SortingTester.cpp  SortingTester.h  internal_script.hpp  libimpl.cpp  main.cpp  sva.hpp
src/gui/: ComponentStack.hpp  CoreComponents.hpp  GuiComponent.hpp  drawing_helper.cpp  drawing_helper.hpp
src/gui/Views/: View.cpp  View.h  ViewManager.cpp  ViewManager.h
src/gui/themes/: dark.h
src/lua/: safesol.cpp  safesol.h
tests/: test_sorting_functions.cpp
